--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,22 @@
             <version>1.2.2</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>2.1.7</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <finalName>d</finalName>
