--- a/pom.xml
+++ b/pom.xml
@@ -174,7 +174,11 @@
             <version>1.2.46</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.14</version>
+        </dependency>
 
     </dependencies>
     <build>
