--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,12 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>d</finalName>
