--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,12 @@
             <artifactId>selenium-remote-driver</artifactId>
             <version>2.39.0</version>
         </dependency>
+    
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.17</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>d</finalName>
