--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		
 		<!--数据库-->
 		<!--<dependency>-->
 			<!--<groupId>mysql</groupId>-->
